fixed horizontal overflow

--- a/src/assignments/project-2/styles/messages.scss
+++ b/src/assignments/project-2/styles/messages.scss
@@ -3,7 +3,8 @@
     flex-direction: column;
 
     .message-list {
-        overflow: scroll;
+        overflow-y: scroll;
+        overflow-x: initial;
         list-style-type: none;
         padding: 0;
 
